api enhancements
