# pkg/rest/docs/swagger.json
@@ -1,14 +1,8 @@
-// Package docs Code generated by swaggo/swag. DO NOT EDIT
-package docs
-
-import "github.com/swaggo/swag"
-
-const docTemplate = `{
-    "schemes": {{ marshal .Schemes }},
+{
     "swagger": "2.0",
     "info": {
-        "description": "{{escape .Description}}",
-        "title": "{{.Title}}",
+        "description": "Mediaserver API for managing collections and items",
+        "title": "Mediaserver API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "Jürgen Enge",
@@ -19,11 +13,51 @@ const docTemplate = `{
             "name": "Apache 2.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
-        "version": "{{.Version}}"
+        "version": "1.0"
     },
-    "host": "{{.Host}}",
-    "basePath": "{{.BasePath}}",
     "paths": {
+        "/collection": {
+            "get": {
+                "description": "retrieves mediaserver collections",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "mediaserver"
+                ],
+                "summary": "gets collections data",
+                "operationId": "get-collections",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/rest.HTTPCollectionResultMessage"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/rest.HTTPResultMessage"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/rest.HTTPResultMessage"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/rest.HTTPResultMessage"
+                        }
+                    }
+                }
+            }
+        },
         "/collection/{collection}": {
             "get": {
                 "description": "retrieves mediaserver collection information",
@@ -54,19 +88,19 @@ const docTemplate = `{
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/api.HTTPResultMessage"
+                            "$ref": "#/definitions/rest.HTTPResultMessage"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/api.HTTPResultMessage"
+                            "$ref": "#/definitions/rest.HTTPResultMessage"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/api.HTTPResultMessage"
+                            "$ref": "#/definitions/rest.HTTPResultMessage"
                         }
                     }
                 }
@@ -95,7 +129,7 @@ const docTemplate = `{
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.CreateItemMessage"
+                            "$ref": "#/definitions/rest.CreateItemMessage"
                         }
                     }
                 ],
@@ -103,25 +137,25 @@ const docTemplate = `{
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.HTTPResultMessage"
+                            "$ref": "#/definitions/rest.HTTPResultMessage"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/api.HTTPResultMessage"
+                            "$ref": "#/definitions/rest.HTTPResultMessage"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/api.HTTPResultMessage"
+                            "$ref": "#/definitions/rest.HTTPResultMessage"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/api.HTTPResultMessage"
+                            "$ref": "#/definitions/rest.HTTPResultMessage"
                         }
                     }
                 }
@@ -142,25 +176,25 @@ const docTemplate = `{
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.HTTPIngestItemMessage"
+                            "$ref": "#/definitions/rest.HTTPIngestItemMessage"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/api.HTTPResultMessage"
+                            "$ref": "#/definitions/rest.HTTPResultMessage"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/api.HTTPResultMessage"
+                            "$ref": "#/definitions/rest.HTTPResultMessage"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/api.HTTPResultMessage"
+                            "$ref": "#/definitions/rest.HTTPResultMessage"
                         }
                     }
                 }
@@ -217,19 +251,19 @@ const docTemplate = `{
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/api.HTTPResultMessage"
+                            "$ref": "#/definitions/rest.HTTPResultMessage"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/api.HTTPResultMessage"
+                            "$ref": "#/definitions/rest.HTTPResultMessage"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/api.HTTPResultMessage"
+                            "$ref": "#/definitions/rest.HTTPResultMessage"
                         }
                     }
                 }
@@ -237,27 +271,72 @@ const docTemplate = `{
         }
     },
     "definitions": {
-        "api.CreateItemMessage": {
+        "rest.CreateItemMessage": {
             "type": "object",
             "properties": {
+                "ingest_type": {
+                    "description": "The type of ingest\n* keep: ingest without copy of data\n* copy: ingest with copy of data\n* move: ingest with copy of data and deletion after copy\ndefault: keep",
+                    "type": "string",
+                    "enum": [
+                        "keep",
+                        "copy",
+                        "move"
+                    ],
+                    "example": "copy"
+                },
                 "parent": {
-                    "type": "string"
+                    "description": "Parent is an optional field that represents the signature of the parent item, if any.\nThis is used to establish a parent-child relationship between items.",
+                    "type": "string",
+                    "example": "test/10_3931_e-rara-20425_20230519T104744_gen6_ver1.zip_10_3931_e-rara-20425_export_mets.xml"
                 },
                 "path": {
+                    "description": "Urn represents the path of the item. It is used to locate the item within the system.",
+                    "type": "string",
+                    "example": "vfs://test/ub-reprofiler/mets-container-doi/bau_1/2023/9940561370105504/10_3931_e-rara-20425_20230519T104744_gen6_ver1.zip/10_3931_e-rara-20425/export_mets.xml"
+                },
+                "public": {
+                    "description": "Public is an optional field that can be used to store any public data associated with the item.",
+                    "type": "boolean",
+                    "example": true
+                },
+                "public_actions": {
+                    "description": "PublicActions is an optional field that can be used to store any public actions associated with the item.",
+                    "type": "string"
+                },
+                "signature": {
+                    "description": "Signature is a unique identifier for the item within its collection.",
+                    "type": "string",
+                    "example": "10_3931_e-rara-20425_20230519T104744_gen6_ver1.zip_10_3931_e-rara-20425_export_mets.xml"
+                }
+            }
+        },
+        "rest.HTTPCollectionResultMessage": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "identifier": {
+                    "type": "string"
+                },
+                "jwtkey": {
                     "type": "string"
                 },
                 "public": {
                     "type": "string"
                 },
-                "public_actions": {
+                "secret": {
                     "type": "string"
                 },
-                "signature": {
+                "signature_prefix": {
                     "type": "string"
+                },
+                "storage": {
+                    "$ref": "#/definitions/rest.HTTPStorageResultMessage"
                 }
             }
         },
-        "api.HTTPIngestItemMessage": {
+        "rest.HTTPIngestItemMessage": {
             "type": "object",
             "properties": {
                 "collection": {
@@ -271,7 +350,7 @@ const docTemplate = `{
                 }
             }
         },
-        "api.HTTPResultMessage": {
+        "rest.HTTPResultMessage": {
             "type": "object",
             "properties": {
                 "code": {
@@ -283,24 +362,29 @@ const docTemplate = `{
                     "example": "status bad request"
                 }
             }
+        },
+        "rest.HTTPStorageResultMessage": {
+            "type": "object",
+            "properties": {
+                "datadir": {
+                    "type": "string"
+                },
+                "filebase": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "subitemdir": {
+                    "type": "string"
+                },
+                "tempdir": {
+                    "type": "string"
+                }
+            }
         }
     }
-}`
-
-// SwaggerInfo holds exported Swagger Info so clients can modify it
-var SwaggerInfo = &swag.Spec{
-	Version:          "1.0",
-	Host:             "",
-	BasePath:         "",
-	Schemes:          []string{},
-	Title:            "Mediaserver API",
-	Description:      "Mediaserver API for managing collections and items",
-	InfoInstanceName: "swagger",
-	SwaggerTemplate:  docTemplate,
-	LeftDelim:        "{{",
-	RightDelim:       "}}",
-}
-
-func init() {
-	swag.Register(SwaggerInfo.InstanceName(), SwaggerInfo)
 }
